# sri_rs

./: Cargo.toml  config.properties  rustfmt.toml
index/: img_association.txt  img_base.txt  snd_association.txt  snd_base.txt  txt_association.txt  txt_base.txt
results/: 1456604229.res  1456605145.res
src/: indexing.rs  querying.rs
src/includes/: context_types.rs  image_types.rs  mod.rs  sound_types.rs  text_types.rs
src/includes/indexing/: image_indexing.rs  mod.rs  sound_indexing.rs  text_indexing.rs
src/includes/querying/: image_querying.rs  mod.rs  text_querying.rs
